# proba-bankruptcies

./: .gitignore  LICENSE  README.md  SCHEMA.md  docker-compose.yml  progress.md  pyproject.toml
bankruptcy/: __init__.py  alerts.py  api.py  clustering.py  config.py  crosscheck.py  db.py  ingest.py  ingest_edgar.py  models.py  normalize.py  watermark.py
bankruptcy/sources/: courtlistener.py  edgar.py
bankruptcy/templates/: about.html  dashboard.html
components/: alerts.md  api.md  dashboard.md  data-collection.md
migrations/: 001_initial_schema.sql  002_jurisdiction_court_id_nullable.sql  003_ingest_watermark.sql
scripts/: check_db.py  coverage_check.py  data_quality.py  debug_one.py  fetch_cl_for_edgar.py  inspect_recent.py  renormalize.py  reparse_edgar_bodies.py
tests/: test_classify_debtor.py
