[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bankruptcy"
version = "0.1.0"
description = "US bankruptcy event detection pilot — CourtListener ingestion, JSON API, dashboard, webhook alerts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ernst Francisc-Erik" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.20",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["bankruptcy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
